# pyaptamer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  =0.12.0  CHANGELOG.md  CODE_OF_CONDUCT.md  FIX.md  LICENSE  README.md  README>md  SECURITY_ISSUE.md  aptanet_tutorial.ipynb  converted_structure.cif  download_samples.py  pseaac_features.txt  pyproject.toml  requirements.txt  test.ipynb  test_samples.py  x.ipynb  x.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  release.yml  test.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
AptaNet/: aptanet.py  neural_net.py  pseaac.py  test_pseaac.py
aptanet/: _feature_classifier.py
aptatrans/: pipeline.py
build_tools/: convert_deepdnashape.py  fail_on_missing_init_files.sh  run_all_notebooks.sh
data/pdb/: 1a2d_cleaned.cif  1bna_cleaned.cif  1c0a_cleaned.cif  1crn_cleaned.cif  4hhb_cleaned.cif  4hhb_cleaned_roundtrip_cleaned.cif
docs/: index.md  installation.md  make.bat  quickstart.md
docs/aptatrans/: overview.md
docs/source/: api_reference.md  conf.py  index.md  installation.md
examples/: aptanet_finetuning_tutorial.ipynb  aptanet_tutorial.ipynb  aptatrans_tutorial.ipynb  benchmarking_enhanced_api.py  benchmarking_tutorial.ipynb  ssrf_poc.py
experiments/tests/: test_aptamer_eval.py
lightning_logs/version_1/: metrics.csv
mcts/: _algorithm.py
pyaptamer/: __init__.py  _config.py  _logger.py  aptatrans_example.ipynb  process_pdb.py
pyaptamer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyaptamer/AptaNet/: _props.py  aptanet.py  neural_net.py  pseaac.py  test_pseaac.py  utils.py
pyaptamer/PSeAAC/: _props.py  pseaac.py  test_pseaac.py
pyaptamer/_utils/: pseaac_utils.py
pyaptamer/aptable/: __init__.py  _model.py  _model_lightning.py
pyaptamer/aptacom/: __init__.py  _aptacom.py  _aptacom_utils.py  _pipeline.py
pyaptamer/aptadiff/: __init__.py  _functional.py  _transforms.py
pyaptamer/aptamcts/: __init__.py  _feature_classifier.py  _pipeline.py  _transforms.py
pyaptamer/aptamlm/: __init__.py  _model.py  _pipeline.py
pyaptamer/aptanet/: __init__.py  _aptanet_nn.py  _feature_classifier.py  _feature_predictor.py  _model.py  _pipeline.py  _transforms.py  aptanet_nn.py  feature_selector.py  pipeline.py  skorch.py
pyaptamer/aptatrans/: __init__.py  _model.py  _model_lightning.py  _pipeline.py  _plotting.py  _solver.py  _torch_dataset.py  _transforms.py  model.py  pipeline.py  solver.py  utils.py
pyaptamer/base/: __init__.py  _base_solver.py
pyaptamer/benchmarking/: __init__.py  _base.py
pyaptamer/data/: __init__.py  loader.py  rna2vec_utils.py
pyaptamer/datasets/: __init__.py
pyaptamer/deepDNAshape/: _model.py  _predictor.py
pyaptamer/deepatamer/: __init__.py  _deepaptamer_nn.py  _model.py  _pipeline.py  _preprocessing.py  model.py  preprocessing.py
pyaptamer/deepdnashape/: __init__.py  _model.py  _params.json  _predictor.py  predictor.py
pyaptamer/experiment/: __init__.py  _aptamer.py
pyaptamer/experiments/: __init__.py  _aptamer.py  _aptamer_aptamcts.py  _aptamer_aptanet.py  _aptamer_aptatrans.py  _aptamer_eval.py
pyaptamer/hi/: __init__.py  features.py
pyaptamer/maws/: structure.py
pyaptamer/mcts/: __init__.py  _algorithm.py  _checkpoint.py  algorithm.py
pyaptamer/motifs/: __init__.py  _enrichment.py  _finder.py
pyaptamer/pdb/: __init__.py  analyzers.py  utils.py
pyaptamer/pseaac/: __init__.py  _features.py  _props.py  _pseaac_aptanet.py  _pseaac_general.py  features.py
tests/: test_positional_encoding.py  test_structure.py
utils/: pdb_to_string.py
(+297 files in other folders)
