[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaptamer"
version = "0.0.1.dev0"
description = "Python library for aptamer simulation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="German Center for Open Source AI", email="info@gcos.ai"}
]

dependencies = [
    "openmm>=8.3.0,<8.4.0",
    "pandas>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "pre-commit",
    "python>=12.0.0,<13.0.0"
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["__pycache__", ".venv", "build", "dist", ".git"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "C4"]
ignore = ["N803", "N806"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
docstring-code-format = true

[tool.setuptools.packages.find]
include = ["pyaptamer*"]
