[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaptamer"
version = "0.1.0a1"
description = "Python library for aptamer simulation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="German Center for Open Source AI", email="info@gcos.ai"}
]

dependencies = [
    "biopython>=1.83",
    "datasets>=4.8.5",
    "lightning>=2.6.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-base",
    "torch>=2.11.0",
    "scikit-learn>=1.7.2,<1.8.0",
    "skorch",
    "imblearn",
    "requests",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "pytest>=9.0.3",
    "pre-commit",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["__pycache__", ".venv", "build", "dist", ".git"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "C4", "T20"]
ignore = ["N803", "N806", "N812"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.setuptools.packages.find]
include = ["pyaptamer*"]
exclude = ["pyaptamer.tests*", "pyaptamer.*.tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pyaptamer = ["datasets/data/*.csv", "datasets/data/*.pdb"]

[tool.ruff.lint.per-file-ignores]
"examples/*.ipynb" = ["T201"]
